--- a/TM1_Recuperação_de_Imagens.ipynb
+++ b/TM1_Recuperação_de_Imagens.ipynb
@@ -5,10 +5,9 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [
-        "eEIkAj8hHEvw",
         "BJyoyxXxFAun"
       ],
-      "authorship_tag": "ABX9TyOpetyHmeCpGdyHHtPuzW/m",
+      "authorship_tag": "ABX9TyPaduGpDPdvI3IpFYkwovH0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -391,7 +390,8 @@
         "\n",
         "Author:\n",
         "\n",
-        "* Vitor Yuske Watanabe"
+        "* Vitor Yuske Watanabe - 2020.1905.058-4\n",
+        "* Matheus Lopo Borges - 2017.1904.081-8"
       ],
       "metadata": {
         "id": "X92tQsbw1VFD"
